--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="unh-Rt69jmeXp0VS_wtYjL3reydkywYLnvldGr1GCjw" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cold Plunge Tubs for Athletes: What Makes Them a Must-Have for Faster Recovery</title>
